# jetson_xavier_nx_monocular_sdk

./: CMakeLists.txt  Makefile  README.md  id_rsa.pub  main.c  main.cpp  main_read.c
cmd_parse/: Makefile  cmd_parse.c  cmd_parse.h
common/: Makefile  common.c  common.h
config/: cssc132_user_config.ini  ids_default_config.ini  ids_user_config.ini  m3s_def_config.ini  m3s_user_config.ini
cssc132/: Makefile  cssc132.c  cssc132.h
fifo/: ringbuf.c  ringbuf.h
handler/: CMakeLists.txt  handler.c  handler.h
led/: Makefile  led.c  led.h
m3st130h/: DVPCamera.h  m3st130h.c  m3st130h.h
monocular/: monocular.c  monocular.h
mpu9250/: Makefile  mpu9250.c  mpu9250.h
net/: Makefile  net.c  net.h
serial/: Makefile  serial.c  serial.h
sync/: Makefile  sync.c  sync.h
sync_module/: Makefile  sync_module.c  sync_module.h
ub482/: Makefile  ub482.c  ub482.h
ui3240/: Makefile  ui3240.c  ui3240.h
